RAT-478: Apply language features up to JDK17